<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:background="@color/fon">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="30dp"
        android:textColor="@color/text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="369dp"
        android:layout_height="517dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/enter_log"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="150dp"
            android:backgroundTint="@color/black"
            android:hint="@string/enter_log"
            android:minHeight="48dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></EditText>

        <EditText
            android:id="@+id/enter_pass"
            android:layout_width="388dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/black"
            android:hint="@string/enter_pas"
            android:inputType="textPassword"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"></EditText>

        <EditText
            android:id="@+id/check_pass"
            android:layout_width="376dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/black"
            android:hint="@string/check_pas"
            android:inputType="textPassword"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"></EditText>

        <Button
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:background="@drawable/corners"
            android:backgroundTint="@color/fon"
            android:onClick="Register"
            android:text="@string/register"></Button>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>